--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
   </div>
-  <button id="start" class="hidden">mobile start</button>
+  <button id="start">mobile start</button>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
